興味ボタン通知　改善

--- a/draft/view_classrooms_fixed.html
+++ b/draft/view_classrooms_fixed.html
@@ -86,7 +86,7 @@
           </td>
         {% endfor %}
         <td>
-          <button type="button" onclick="submitForm({{ row_index }})">興味あり</button>
+          <button type="button" onclick="submitForm('{{ row_index }}')">興味あり</button>
         </td>
       </tr>
       {% endfor %}
